# papae

./: .env_demo  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.zh.md  main.py  pyproject.toml
.omc/sessions/: bdf0d931-3eee-43db-9366-18e077dcb695.json
.omc/state/: .hud-state.json.tmp.ab35a361-e204-4450-8737-84c5ddf925e1  agent-replay-bdf0d931-3eee-43db-9366-18e077dcb695.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  subagent-tracking.json
docs/: architecture.md
docs/superpowers/specs/: 2026-04-18-infant-gait-assessment-design.md  2026-04-18-interactive-viewer-design.md
openspec/changes/archive/2026-04-18-add-interactive-viewer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-fix-coordinate-scaling-and-mask-highlighting/: design.md  proposal.md  tasks.md
openspec/changes/infant-gait-assessment/: proposal.md  tasks.md
openspec/changes/programmatic-api/: design.md  proposal.md  tasks.md
src/gait_assess/: __init__.py  __main__.py  api.py  cli.py  gait_analyzer.py  llm_assessor.py  models.py  pose_segmentor.py  pose_utils.py  preprocessor.py  report_generator.py  viewer.html  visualizer.py
src/gait_assess/prompts/: developmental.jinja.md  gait.jinja.md  posture.jinja.md
tests/: test_api.py  test_cli.py  test_developmental.py  test_gait_analyzer.py  test_llm_assessor.py  test_pose_segmentor.py  test_pose_utils.py  test_posture.py  test_preprocessor.py  test_report_generator.py  test_visualizer.py
tests/fixtures/: generate_test_video.py
(+20 files in other folders)
