[project]
name = "gait-assess"
version = "0.1.0"
description = "婴幼儿走路姿态评估系统 - 基于 YOLO + LLM 的命令行工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.0",
    "supervision>=0.22",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "basedpyright>=1.14",
]

[project.scripts]
gait-assess = "gait_assess.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gait_assess"]

[tool.basedpyright]
include = ["src"]
exclude = [".venv", "__pycache__", ".git", "data"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
